2003-10-22  Gary Thomas  <gary@mlbassoc.com>

	* cdl/hal_powerpc_rattler.cdl: Add CDL to identify board model.

2003-09-21  Gary Thomas  <gary@mlbassoc.com>

	* misc/redboot_RAM.ecm: 
	* misc/redboot_ROM.ecm: 
	* misc/redboot_ROMRAM+PCI.ecm: 
	* misc/redboot_ROMRAM.ecm:  Adjust for changes in RedBoot
	template - DNS now must be enabled manually.

2003-09-08  Gary Thomas  <gary@mlbassoc.com>

	* src/hal_aux.c (hal_platform_init): Avoid performing some hardware
	initialization for "user" programs (those that are assuming the
	presence of a working ROM monitor).  These initializations caused
	the monitor (RedBoot) to get totally lost, especiall when connected
	to GDB via ethernet.

2003-09-02  Gary Thomas  <gary@mlbassoc.com>

	* src/hal_aux.c (_rattler_reset): Try to be more careful when
	resetting the board - sometimes PCI vanished when this was done.

2003-08-28  Gary Thomas  <gary@mlbassoc.com>

	* src/redboot_linux_exec.c: Obsolete file - removed.

	* src/plf_redboot_linux_exec.c: New file - platform specifics
	for booting Linux kernel from RedBoot.

	* cdl/hal_powerpc_rattler.cdl: Linux booting from RedBoot is 
	now supported at the architecture level.  Changes to support 
	architecture/platform layering.

2003-08-26  Gary Thomas  <gary@mlbassoc.com>

	* src/rattler.S: 
	* src/hal_aux.c: Add PCI initialization - agent mode only.

2003-08-19  Gary Thomas  <gary@mlbassoc.com>

	* src/redboot_linux_exec.c: 
	* src/rattler.S: 
	* src/hal_diag.c: 
	* src/hal_aux.c: 
	* misc/redboot_ROMRAM.ecm: 
	* misc/redboot_ROMRAM+PCI.ecm: 
	* misc/redboot_ROM.ecm: 
	* misc/redboot_RAM.ecm: 
	* include/pkgconf/mlt_powerpc_rattler_romram.mlt: 
	* include/pkgconf/mlt_powerpc_rattler_romram.ldi: 
	* include/pkgconf/mlt_powerpc_rattler_romram.h: 
	* include/pkgconf/mlt_powerpc_rattler_rom.mlt: 
	* include/pkgconf/mlt_powerpc_rattler_rom.ldi: 
	* include/pkgconf/mlt_powerpc_rattler_rom.h: 
	* include/pkgconf/mlt_powerpc_rattler_ram.mlt: 
	* include/pkgconf/mlt_powerpc_rattler_ram.ldi: 